--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://hoangdai9895.github.io/node-blog-cl",
     "engines": {
         "node": "10.15.3"
     },
@@ -26,7 +27,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "deploy": "react-scripts build && gh-pages -d build"
     },
     "eslintConfig": {
         "extends": "react-app"
