--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "not ie <= 11",
         "not op_mini all"
     ],
-    "proxy": "https://node-server-blog.herokuapp.com",
+    "proxy": "https://node-blog-sv.herokuapp.com/",
     "devDependencies": {
         "gh-pages": "^2.0.1"
     }
